--- a/app/pages/page2/page2.html
+++ b/app/pages/page2/page2.html
@@ -1,10 +1,13 @@
 
 <ion-navbar *navbar>
   <ion-title>
-    Tab 2
+    Info
   </ion-title>
 </ion-navbar>
 
 <ion-content class="page2">
+<center>
+<img src="img/b897e2aa-4be3-4471-9890-f4d4e927f566.jpg">
+</center>
 
 </ion-content>
