--- a/app/pages/page3/page3.html
+++ b/app/pages/page3/page3.html
@@ -1,10 +1,20 @@
-
 <ion-navbar *navbar>
   <ion-title>
     Tab 3
   </ion-title>
+
 </ion-navbar>
 
 <ion-content class="page3">
 
+  <ion-list>
+
+
+    <ion-item *ngFor="#p of myData">
+      <ion-label [ngClass]="{completeddd:p.completed,notcompleteddd:!p.completed}">{{p.name}}</ion-label>
+      <ion-checkbox dark checked="{{p.completed}}" longPress="{{p._id}}" (click)="completeChange(p)"></ion-checkbox>
+    </ion-item>
+  </ion-list>
+
+  <button fab fab-bottom fab-right class="fixed" (click)="clicked()"><ion-icon name='add'></ion-icon></button>
 </ion-content>
