--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         __meteor_runtime_config__ = {
             meteorEnv : {},
-            DDP_DEFAULT_CONNECTION_URL: "http://localhost:3000"
+            DDP_DEFAULT_CONNECTION_URL: "http://52.11.183.113/"
         };
     </script>
     <script type="text/javascript" src="meteor/49c91c7147a2e38e7ac8f4966e7327b752bfbb42.js"></script>
