app name change

--- a/app/pages/page1/page1.html
+++ b/app/pages/page1/page1.html
@@ -3,7 +3,7 @@
 </ion-navbar>
 
 <ion-content padding class="page1" style="background-color:#FFFFFF;">
-  <h2>Welcome to Ionic!</h2>
+  <h2>Shahar's App!</h2>
   
   <ion-list>
   <!--<ion-item-sliding >-->
